--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
         <nav class="navigation">
             <a class="link logo" href="/">Web<span class="part-logo">Studio</span></a>
             <ul class="nav-list list">
-                <li class="nav-list-item">
-                    <a class="nav-link link current" href="./index.html">Студия</a></li>
+                <li class="nav-list__item">
+                    <a class="nav-list__link link current" href="./index.html">Студия</a></li>
                     
-                <li class="nav-list-item">
-                    <a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
-                <li class="nav-list-item">
-                    <a class="nav-link link" href="">Контакты</a></li>
+                <li class="nav-list__item">
+                    <a class="nav-list__link link" href="./portfolio.html">Портфолио</a></li>
+                <li class="nav-list__item">
+                    <a class="nav-list__link link" href="">Контакты</a></li>
             </ul>
         </nav>
         <div class="">
         <ul class="contacts list">
-            <li class="contacts-item">
-                <a class="contacts-link link" href="mailto:info@devstudio.com">
+            <li class="contacts__item">
+                <a class="contacts__link link" href="mailto:info@devstudio.com">
                     <svg class="envelope" width="16" height="12">
                         <use href="./image/symbol-defs.svg#icon-envelope-hover"></use>
                     </svg>info@devstudio.com</a></li>
-            <li class="contacts-item">
-                <a class="contacts-link link" href="tel:+380961111111">
+            <li class="contacts__item">
+                <a class="contacts__link link" href="tel:+380961111111">
                     <svg class="vector" width="10" height="16">
                     <use href="./image/symbol-defs.svg#icon-Vector"></use>
                 </svg>+38 096 111 11 11</a></li>
